Fixed footer bug on smaller screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,13 +22,30 @@ header {
   width:100%;
   box-shadow: 0px 0px 2px 2px;
   z-index:1;
+  background-color:#FFFFFF;
 }
 
 footer {
-  Position: absolute;
+  Position: relative;
   Width: 100%;
+  height:75px;
   Bottom: 0;
-  Height: 75px;
+  background-color:#FFFFFF;
+}
+
+.page-container {
+  padding-bottom:80px;
+}
+
+.podbar {
+  bottom:0;
+  position:fixed;
+  z-index:150;
+  width:100%;
+  _position:absolute;
+  _top:expression(eval(document.documentElement.scrollTop+
+  (document.documentElement.clientHeight-this.offsetHeight)));
+  height:75px;
 }
 
 .top-links {
